--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -85,7 +85,7 @@
                                             </button>
                                         </td>
                                         <td class="text-center">{{ dataList.length - i }}</td>
-                                        <td class="text-center">{{data.ExpenseDate }}</td>
+                                        <td class="text-center">{{dateFormat(data.ExpenseDate)}}</td>
                                         <td class="text-center">{{data.InvoiceNo}}</td>
                                         <td class="text-center">{{data.ShopName }}
                                             <span [style.color]="'blue'" *ngIf="data.AreaName !== 'null'">({{data.
