--- a/web1/src/app/company-payment/petty-cash/petty-cash.component.html
+++ b/web1/src/app/company-payment/petty-cash/petty-cash.component.html
@@ -88,7 +88,7 @@
                                         <td  class="text-center">{{data.CreditType}}</td>
                                         <td  class="text-center">{{data.Amount | currency:companySetting.CompanyCurrency:'symbol':companySetting.CurrencyFormat}}</td>
                                         <td  class="text-center">{{data.Comments}}</td>
-                                        <td  class="text-center">{{data.CreatedOn }}</td>
+                                        <td  class="text-center">{{dateFormat(data.CreatedOn)}}</td>
                                         <td  class="text-center">{{data.CreatedPerson}}</td>
                                         <td  class="text-center">{{data.UpdatedPerson}}</td>
                                     </tr>
