--- a/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web1/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -96,7 +96,7 @@
                                                 <td>{{f.CustomerName}}</td>
                                                 <td>{{f.MobileNo}}</td>
                                                 <td>{{f.InvoiceNo}}</td>
-                                                <td>{{f.InvoiceDate}}</td>
+                                                <td>{{dateFormat(f.InvoiceDate)}}</td>
                                                 <td>{{f.ProductName}}</td>
                                                 <td>{{f.LensType}}</td>
                                                 <td>{{(f.Option !== 'undefined')? f.Option: ''}}</td>
