--- a/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
+++ b/web1/src/app/po/supplier-po-list/supplier-po-list.component.html
@@ -115,8 +115,8 @@
                                                 <td>{{v.MRDNo}}</td>
                                                 <td>{{v.CustomerName}}</td>
                                                 <td>{{v.MobileNo1}}</td>
-                                                <td>{{v.InvoiceDate }}</td>
-                                                <td>{{v.DeliveryDate }}</td>
+                                                <td>{{dateFormat(v.InvoiceDate)}}</td>
+                                                <td>{{dateFormat(v.DeliveryDate)}}</td>
                                                 <td>{{v.InvoiceNo}}</td>
                                                 <td>{{v.ProductName}}</td>
                                                 <td>{{v.Quantity}}</td>
