--- a/web1/src/app/inventory/fitter-list/fitter-list.component.html
+++ b/web1/src/app/inventory/fitter-list/fitter-list.component.html
@@ -100,8 +100,8 @@
                           <td class="text-left">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
                           <td class="text-left">{{(data.Email !== 'null')? data.Email: ''}}</td>
                           <td class="text-left">{{data.Address}}</td>
-                          <td class="text-left">{{data.DOB}}</td>
-                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left">{{dateFormat(data.DOB)}}</td>
+                          <td class="text-left">{{dateFormat(data.Anniversary)}}</td>
                           <td class="text-left"> {{data.CreatedPerson}} </td>
                           <td class="text-left"> {{data.UpdatedPerson}} </td>
                         </tr>
