--- a/web1/src/app/po/supplier-po/supplier-po.component.html
+++ b/web1/src/app/po/supplier-po/supplier-po.component.html
@@ -147,8 +147,8 @@
                                             <td>{{v.MRDNo}}</td>
                                             <td>{{v.CustomerName}}</td>
                                             <td>{{v.MobileNo1}}</td>
-                                            <td>{{v.InvoiceDate}}</td>
-                                            <td>{{v.DeliveryDate }}</td>
+                                            <td>{{dateFormat(v.InvoiceDate)}}</td>
+                                            <td>{{dateFormat(v.InvoiceDate)}}</td>
                                             <td>{{v.InvoiceNo}}</td>
                                             <td>{{v.ProductName}}</td>
                                             <td>{{v.Quantity}}</td>
@@ -272,7 +272,7 @@
                     <tbody>
                         <tr class="text-center" *ngFor="let s of Orderpower; let i = index;">
                             <td class="text-left">{{i+1}}</td>
-                            <td>{{s.CreatedOn}}</td>
+                            <td>{{dateFormat(s.CreatedOn)}}</td>
                             <td>{{s.Family}}</td>
                             <td>{{s.RefferedByDoc}}</td>
                             <td>{{s.REDPSPH}}</td>
