--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -223,14 +223,14 @@
                             <td>{{this.DetailtotalQty}}</td>
                             <td>{{this.DetailtotalUnitPrice}}</td>
                             <td>{{this.DetailtotalDiscount}}</td>
-                            <td></td>
+                            <td>{{this.DetailtotalSubTotal}}</td>
                             <td></td>
                             <td></td>
                             <td data-mdb-toggle="modal" data-mdb-target="#exampleModal" (click)="openModal(content)">
                               {{this.DetailtotalGstAmount}}</td>
                             <td>{{this.DetailtotalAmount}}</td>
-                            <td></td>
-                            <td></td>
+                            <td>{{this.DetailtotalRetailPrice}}</td>
+                            <td>{{this.DetailtotalWholeSalePricet}}</td>
                           </tr>
                         </thead>
                         <tbody class="text-center">
